[package]
name = "pantsu_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
lz_fnv = "0.1.2"
proc-macro2 = "1.0.69"
regex = "1.10.2"
syn = "2.0.38"
quote = { version = "1.0.33", features = ["proc-macro"] }
