[package]
name = "pantsu_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
figment = { version = "0.10.10", features = ["yaml"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
tokio-stream = "0.1.14"
serde = "1.0.171"
serde_json = "1.0.103"
thiserror = "1.0.43"
