[package]
name = "pantsu_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
blockhash = "0.5.0"
chrono = "0.4.26"
figment = { version = "0.10.10", features = ["yaml"] }
image = "0.24.7"
lz_fnv = "0.1.2"
regex = "1.9.3"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_db_pools = { version = "0.1.0-rc.3", features = [ "deadpool_postgres"] }
serde = "1.0.171"
serde_json = "1.0.103"
thiserror = "1.0.43"
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
