[package]
name = "pantsu_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["multipart"] }
axum-macros = "0.4.1"
axum_typed_multipart = "0.11.0"
blockhash = "0.5.0"
byte-unit = "5.1.4"
bytes = "1.5.0"
chrono = "0.4.33"
figment = { version = "0.10.14", features = ["env", "yaml"] }
futures = "0.3.30"
image = "0.24.8"
lz_fnv = "0.1.2"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "fs"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.5.1", features = ["trace", "request-id"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }
yansi = "1.0.0-rc.1"

pantsu_macros = { path = "../pantsu_macros" }
